; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tnftp/src/extr_main.c_makeargv.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tnftp/src/extr_main.c_makeargv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@line = common dso_local global i32* null, align 8
@stringbase = common dso_local global i32* null, align 8
@argbuf = common dso_local global i32 0, align 4
@argbase = common dso_local global i32 0, align 4
@slrflag = common dso_local global i64 0, align 8
@marg_sl = common dso_local global %struct.TYPE_3__* null, align 8
@margc = common dso_local global i32 0, align 4
@cursor_pos = common dso_local global i32* null, align 8
@cursor_argc = common dso_local global i32 0, align 4
@cursor_argo = common dso_local global i64 0, align 8
@margv = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @makeargv() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32*, i32** @line, align 8
  store i32* %2, i32** @stringbase, align 8
  %3 = load i32, i32* @argbuf, align 4
  store i32 %3, i32* @argbase, align 4
  store i64 0, i64* @slrflag, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** @marg_sl, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i64 0, i64* %5, align 8
  store i32 0, i32* @margc, align 4
  br label %6

6:                                                ; preds = %15, %0
  %7 = call i8* (...) @slurpstring()
  store i8* %7, i8** %1, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @marg_sl, align 8
  %9 = load i8*, i8** %1, align 8
  %10 = call i32 @ftp_sl_add(%struct.TYPE_3__* %8, i8* %9)
  %11 = load i8*, i8** %1, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %6
  br label %18

14:                                               ; preds = %6
  br label %15

15:                                               ; preds = %14
  %16 = load i32, i32* @margc, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* @margc, align 4
  br label %6

18:                                               ; preds = %13
  %19 = load i32*, i32** @cursor_pos, align 8
  %20 = load i32*, i32** @line, align 8
  %21 = icmp eq i32* %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  store i32 0, i32* @cursor_argc, align 4
  store i64 0, i64* @cursor_argo, align 8
  br label %36

23:                                               ; preds = %18
  %24 = load i32*, i32** @cursor_pos, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %35

26:                                               ; preds = %23
  %27 = load i32, i32* @margc, align 4
  store i32 %27, i32* @cursor_argc, align 4
  %28 = load i32*, i32** @margv, align 8
  %29 = load i32, i32* @margc, align 4
  %30 = sub nsw i32 %29, 1
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %28, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = call i64 @strlen(i32 %33)
  store i64 %34, i64* @cursor_argo, align 8
  br label %35

35:                                               ; preds = %26, %23
  br label %36

36:                                               ; preds = %35, %22
  ret void
}

declare dso_local i8* @slurpstring(...) #1

declare dso_local i32 @ftp_sl_add(%struct.TYPE_3__*, i8*) #1

declare dso_local i64 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
